--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "bulma": "^0.7.1",
+        "laravel-echo": "^1.3.5",
+        "pusher-js": "^4.2.2",
+        "vue-chat-scroll": "^1.2.1"
     }
 }
